# AssimpImporterExample

./: CMakeLists.txt
modules/: FindMagnumPlugins.cmake
src/: CMakeLists.txt  MyApplication.cpp
